# BeautyCompass_Pro

./: .pre-commit-config.yaml  README.md  pyproject.toml
compas/: constants.py  manage.py
compas/BeautyCompass Pro/: asgi.py  settings.py  urls.py
compas/core/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
compas/core/management/commands/: data_generator.py
vancouver_beauty_guide/: output.csv  paginations.py
vancouver_beauty_guide/BeautyCompass Pro/: urls.py  wsgi.py
vancouver_beauty_guide/core/: permissions.py  serializers.py  urls.py  views.py
